Fix magic page footer spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -141,7 +141,7 @@ figcaption {
 }
 
 #magic #footer {
-  padding-top: 55vw;
+  padding-top: 60vw;
 }
 
 .js #magic-images {
@@ -229,7 +229,7 @@ figcaption {
   }
 
   #magic #footer {
-    padding-top: 47vw;
+    padding-top: 50vw;
   }
 
   .img-circle {
